# krypton

./: .gitattributes  .gitignore  .gitmodules  .pylintrc  .setupLocalCIBW.ps1  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DATABASES.md  Keydb.py  MANIFEST.in  PySec.py  PySec.pyproj  PySec.sln  README-CONFIGS.md  README-CRYPTO.md  README-DATABASES.md  README-DJANGO.md  README-FIDO.md  README-FLASK.md  README-INTEGRATIONS.md  README-KMS.md  README-USER-AUTH.md  README.md  README_KMS.md  SECURITY.md  crypto.db  linux.cmake  pyproject.toml  renovate.json  requirements.txt  sec_feature_plan.md  setup.py  test-mac.yml  test.py  users.py  vcpkg.json
.devcontainer/: devcontainer.json
.github/: CODEOWNERS  bandit.yml  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/code-ql/: codeql-config.yml
.github/workflows/: CodeReview.yml  DependabotMerge.yml  UserGreet.yml  build+release.yml  build.yml  codeql-analysis.yml  greetings.yml  liveTest.yml  main.yml  main2.yml  push.js  pyTest.yml  release.yml  stale.yml  staticAnalysis.yml  test.yml  testReleaseCode.yml  weeklyRelease.yml  win32.yml
CppDotNetDLL/: CppDotNet.vcxproj  CppDotNet.vcxproj.filters  app.config  inter.cpp
CppDotNetDLL/CppDotNet/: CppDotNet.vcxproj  CppDotNet.vcxproj.filters  app.config  inter.cpp  inter.h
Cross-PlatformCryptoLib/: CMakeLists.txt  CMakeSettings.json  Cross-PlatformCryptoLib.cpp  Cross-PlatformCryptoLib.h
CryptoHelper2/: AssemblyInfo.cpp  CryptoHelper2.cpp  CryptoHelper2.h  CryptoHelper2.vcxproj  CryptoHelper2.vcxproj.filters  crypto.cpp  crypto.h
CryptoHelperForLinux/: CryptoHelperForLinux.vcxproj  crypto.cpp  crypto.h
CryptoLib/: CMakeLists.txt  CMakeSettings.json  CryptoLib.c  CryptoLib.cpp  CryptoLib.h  CryptoLib.vcxproj  CryptoLib.vcxproj.filters  OTPs.cpp  aes.cpp  bases.cpp  ecc.cpp  hashes.cpp  symmetric.cpp
CryptoLibLinux/: CryptoLibLinux.c  CryptoLibLinux.vcxproj  CryptoLibLinux.vcxproj.filters
Drivers/win/FilesystemFilter/: FilesystemFilter.c  FilesystemFilter.vcxproj
PySec/: Basic.py  Keydb.py  PyToCSharp.py  __init__.py  __main__.py  decorators.py  globals.py  settings.py
PySecEnv/: pyvenv.cfg
PySecEnv/Scripts/: activate  activate.bat
PythonCSharp/: Class1.cs  PythonCSharp.csproj
PythonCSharp/Properties/: launchSettings.json
Runner/: CMakeLists.txt  CMakeSettings.json  Runner.cpp  Runner.h
Security/Security/: Class1.cs  Security.csproj  runtimeconfig.template.json
Security/Security/Properties/: launchSettings.json
SecurityDLL/: Class1.cs  ExternalHelper.cs  SecurityDLL.cs  SecurityDLL.csproj
SecurityDLL/Properties/: Resources.Designer.cs
SecurityManager/: Program.cs  SecurityManager.csproj  Worker.cs
SecurityManager/Properties/: launchSettings.json
Settings/: App.xaml  App.xaml.cs  FIPS.xaml  FIPS.xaml.cs  FIPS_Set.xaml  FIPS_Set.xaml.cs  MainPage.xaml  MainPage.xaml.cs  MauiProgram.cs  Settings.csproj
Tests/: testCrypto.py
drivers/win/FilesystemFilter/: FilesystemFilter.c  FilesystemFilter.inf  FilesystemFilter.rc  FilesystemFilter.vcxproj.filters
krypton/: __init__.py  __main__.py  __main___.py  _load.py  auth.py  base.py  basic.py
krypton/auth/: __init__.py  _utils.py  bases.py  factors.py  login.py  users.py
krypton/auth/django/: __init__.py  authBackends.py  forms.py  middleware.py  simple.py  types.py  users.py
krypton/auth/users/: __init__.py  bases.py  userModel.py  userModelBaseAuth.py  userModelMFAAuth.py
pysec/: Basic.py  Keydb.py  __init__.py  __main__.py  _load.py  _setups.py  auth.py  base.py  basic.py  globals.py  setups.py  terminal.py
pysec_tmp/: __init__.py
sample-kr-openssl-config/: fipsmodule.cnf  openssl.cnf
security/: placeholder.txt  result.md  result.sarif  sec_feature_plan.md
tests/: api.py  testBaseAPIs.py  testBasic.py  testComponents.py  testCrypto.py  testInterfaces.py  testInternal.py  testUser.py  test_BaseAPIs.py  test_api.py
