[build-system]
requires = ["setuptools>=61.0.0","wheel","pybind11>=2.10.3"]
build-backend = "setuptools.build_meta"

[project]
name = "krptn"
version = "0.8.7"
description = "IAM and data encryption at rest"
readme = "README.md"
authors = [
  { name="Krptn Project" },
]
classifiers=[
    'License :: OSI Approved :: Apache Software License',
    'Operating System :: OS Independent',
    'Intended Audience :: Developers',
    'Intended Audience :: System Administrators',
    'Topic :: Security',
    'Topic :: Security :: Cryptography',
    'Framework :: Django',
    'Framework :: Flask'
]
requires-python=">3.9"
dependencies=["SQLAlchemy>=1.4.0,<2", "webauthn>=1.6.0,<2"]

[project.optional-dependencies]
"MSSQL" = ["pyodbc"]
"MySQL" = ["mysqlclient"]
"PostgreSQL" = ["psycopg2"]
"Django" = ["django"]
"Flask" = ["flask"]
"tests" = ["django"]

[project.urls]
'Homepage'= "https://krptn.mbs9.org/"
'Documentation'= "https://docs.krptn.mbs9.org/"
'GitHub'= "https://github.com/krptn/krypton/"
'Bug Tracker'= "https://github.com/krptn/krypton/issues"
